# study_projects

autodocumentation c++ project/autodoc/: MoveGraphicsItem.pro  dialog.cpp  dialog.h  dialog.ui  dialogdel.cpp  dialogdel.h  linkitem.h  (+14 more)
cryptonews aggregator python project/crytpo_news_agg/: cryptonews.db  pyproject.toml
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/: __init__.py
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/src/data/: types.py
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/src/db/: db_create.py
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/src/parsers/: crypto_news_parser.py
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/src/parsers/cointelegraph/: parser.py
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/src/parsers/todayonchain/: parser.py
cryptonews aggregator python project/crytpo_news_agg/crypto_news_agg/src/utils/: web.py
labs c++ info safety/: labs description.txt
mcmc modeling python project/: py_code.ipynb
modeling simulation c++/: ~$euing_system_simulation_report.docx
networks analysis python project/: project_code_Chen_paper.ipynb  project_code_Kalhor_paper.ipynb
powerBI dashboard project/: MOOCs.xlsx  description.txt  project_powerBI_Zakharova.pbix
python regular expressions/: export_info_from_files.ipynb  lexical_analyzer.ipynb  regular_expressions_practice.ipynb
used car analysis R/: data_processing.ipynb  dromset.csv  report_r.Rmd
website html css js/: description.txt  index.html
(+89 files in other folders)
